--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -4,5 +4,6 @@
 	"item.waters_alchemy_mod.ladle": "Ladle",
 	"item.waters_alchemy_mod.apothecary_guide_book": "Apothecary's Guide Book",
 	"effect.waters_alchemy_mod.projectile_attraction": "Attraction",
-	"effect.waters_alchemy_mod.projectile_shield": "Repulsion"
+	"effect.waters_alchemy_mod.projectile_shield": "Repulsion",
+	"block.waters_alchemy_mod.cauldron.invalid_recipe": "This recipe doesn't seem to be working..."
 }
