Add alchemical furnace fuel system

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -6,5 +6,6 @@
 	"text.waters_alchemy_mod.tooltip.poison_applied": "Applied Effects",
 	"effect.waters_alchemy_mod.projectile_attraction": "Attraction",
 	"effect.waters_alchemy_mod.projectile_shield": "Repulsion",
-	"block.waters_alchemy_mod.cauldron.invalid_recipe": "This recipe doesn't seem to be working..."
+	"block.waters_alchemy_mod.cauldron.invalid_recipe": "This recipe doesn't seem to be working...",
+	"container.waters_alchemy_mod.alchemical_furnace": "Alchemical Furnace"
 }
