--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -3,6 +3,9 @@
 	"item.waters_alchemy_mod.throw_bottle": "Empty Splash Bottle",
 	"item.waters_alchemy_mod.ladle": "Ladle",
 	"item.waters_alchemy_mod.apothecary_guide_book": "Apothecary's Guide Book",
+	"item.waters_alchemy_mod.magical_coal_0": "Magical Coal",
+	"item.waters_alchemy_mod.magical_coal_1": "Enchanted Coal",
+	"item.waters_alchemy_mod.magical_coal_2": "Radiant Coal",
 	"text.waters_alchemy_mod.tooltip.poison_applied": "Applied Effects",
 	"effect.waters_alchemy_mod.projectile_attraction": "Attraction",
 	"effect.waters_alchemy_mod.projectile_shield": "Repulsion",
