Add magic axe and magic pickaxe

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -7,6 +7,8 @@
 	"item.waters_alchemy_mod.magical_coal_1": "Enchanted Coal",
 	"item.waters_alchemy_mod.magical_coal_2": "Radiant Coal",
 	"item.waters_alchemy_mod.magic_dust": "Magic Dust",
+	"item.waters_alchemy_mod.magic_pickaxe": "Magic Infused Pickaxe",
+	"item.waters_alchemy_mod.magic_axe": "Magic Infused Axe",
 	"itemGroup.waters_alchemy_mod.alchemy_mod_group": "Waters Alchemy Mod",
 	"text.waters_alchemy_mod.tooltip.poison_applied": "Applied Effects",
 	"effect.waters_alchemy_mod.projectile_attraction": "Attraction",
