--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -16,9 +16,13 @@
 	"effect.waters_alchemy_mod.projectile_attraction": "Attraction",
 	"effect.waters_alchemy_mod.projectile_shield": "Repulsion",
 	"block.waters_alchemy_mod.cauldron.invalid_recipe": "This recipe doesn't seem to be working...",
+	"block.waters_alchemy_mod.pedestal": "Pedestal",
+	"block.waters_alchemy_mod.jar": "Jar",
 	"container.waters_alchemy_mod.alchemical_furnace": "Alchemical Furnace",
 	"item.waters_alchemy_mod.aspect.air": "Air",
 	"item.waters_alchemy_mod.aspect.water": "Water",
 	"item.waters_alchemy_mod.aspect.earth": "Earth",
-	"item.waters_alchemy_mod.aspect.fire": "Fire"
+	"item.waters_alchemy_mod.aspect.fire": "Fire",
+	"item.waters_alchemy_mod.phial": "Filled Phial",
+	"item.waters_alchemy_mod.phial.empty": "Empty Phial"
 }
