Add missing item model and localization

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -18,6 +18,7 @@
 	"block.waters_alchemy_mod.cauldron.invalid_recipe": "This recipe doesn't seem to be working...",
 	"block.waters_alchemy_mod.pedestal": "Pedestal",
 	"block.waters_alchemy_mod.jar": "Jar",
+	"block.waters_alchemy_mod.phial_shelf": "Phial Shelf",
 	"container.waters_alchemy_mod.alchemical_furnace": "Alchemical Furnace",
 	"item.waters_alchemy_mod.aspect.air": "Air",
 	"item.waters_alchemy_mod.aspect.water": "Water",
@@ -25,6 +26,7 @@
 	"item.waters_alchemy_mod.aspect.fire": "Fire",
 	"item.waters_alchemy_mod.phial": "Filled Phial",
 	"item.waters_alchemy_mod.phial.empty": "Empty Phial",
+	"item.waters_alchemy_mod.research_book": "Research Book",
 	"research.waters_alchemy_mod.test_research.name": "Test Research",
 	"research.waters_alchemy_mod.test_research.desc": "Test research description",
 	"research.waters_alchemy_mod.test_research_1.name": "Test Research",
