Add basic recipe tabs to research pages

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -27,8 +27,9 @@
 	"item.waters_alchemy_mod.phial": "Filled Phial",
 	"item.waters_alchemy_mod.phial.empty": "Empty Phial",
 	"item.waters_alchemy_mod.research_book": "Research Book",
-	"research.waters_alchemy_mod.test_research.name": "Test Research",
-	"research.waters_alchemy_mod.test_research.desc": "Test research description",
+	"research.waters_alchemy_mod.beginner_brewing.name": "Beginner Brewing",
+	"research.waters_alchemy_mod.beginner_brewing.desc": "The simple cauldron is a powerful tool, if used properly. It's potential can seemingly be unlocked with a simple spoon",
+	"research.waters_alchemy_mod.beginner_brewing.desc.completed": "This spoon seems satisfactory",
 	"research.waters_alchemy_mod.test_research_1.name": "Test Research",
 	"research.waters_alchemy_mod.test_research_1.desc": "Test research description",
 	"research.waters_alchemy_mod.test_research_2.name": "Test Research",
