Add item requirements to research

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -44,5 +44,7 @@
 	"research.waters_alchemy_mod.test_research_6.desc": "Test research description",
 	"research_category.waters_alchemy_mod.basic.name": "Basic Thuwumic Stuff",
 	"research_category.waters_alchemy_mod.advanced.name": "Advanced Thuwumic Stuff",
-	"research.toast.research_complete": "Research Complete!"
+	"research.toast.research_complete": "Research Complete!",
+	"research.complete": "Complete Research",
+	"consumed": " (Consumed)"
 }
