Add necromancy items to mob drop tables

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -17,7 +17,7 @@
 	"item.waters_alchemy_mod.necromancy_skull": "Decaying Skull",
 	"item.waters_alchemy_mod.necromancy_arm": "Rotting Arm",
 	"item.waters_alchemy_mod.necromancy_leg": "Decomposing Leg",
-	"item.waters_alchemy_mod.necromancy_torso": "Putrefied Body",
+	"item.waters_alchemy_mod.necromancy_heart": "Putrefied Heart",
 	"item.waters_alchemy_mod.necromancy_ribcage": "Desecrated Ribcage",
 	"item.waters_alchemy_mod.crystal": "Elemental Shard",
 	"item.waters_alchemy_mod.phial": "Filled Phial",
