Add order and disorder aspects

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -3,6 +3,8 @@
 	"item.waters_alchemy_mod.aspect.water": "Water",
 	"item.waters_alchemy_mod.aspect.earth": "Earth",
 	"item.waters_alchemy_mod.aspect.fire": "Fire",
+	"item.waters_alchemy_mod.aspect.order": "Order",
+	"item.waters_alchemy_mod.aspect.disorder": "Discord",
 	"item.waters_alchemy_mod.witchy_spoon": "Witchy Spoon",
 	"item.waters_alchemy_mod.throw_bottle": "Empty Splash Bottle",
 	"item.waters_alchemy_mod.ladle": "Ladle",
@@ -51,13 +53,25 @@
 	"block.waters_alchemy_mod.cluster.air_crystal_large": "Large Air Crystal Bud",
 	"block.waters_alchemy_mod.cluster.air_crystal_medium": "Medium Air Crystal Bud",
 	"block.waters_alchemy_mod.cluster.air_crystal_small": "Small Air Crystal Bud",
-	"block.waters_alchemy_mod.cluster.air_crystal_cluster": " Crystal Cluster",
+	"block.waters_alchemy_mod.cluster.air_crystal_cluster": "Air Crystal Cluster",
 	"block.waters_alchemy_mod.cluster.fire_crystal_block": "Fire Crystal Block",
 	"block.waters_alchemy_mod.cluster.fire_crystal_budding": "Budding Fire Crystal",
 	"block.waters_alchemy_mod.cluster.fire_crystal_large": "Large Fire Crystal Bud",
 	"block.waters_alchemy_mod.cluster.fire_crystal_medium": "Medium Fire Crystal Bud",
 	"block.waters_alchemy_mod.cluster.fire_crystal_small": "Small Fire Crystal Bud",
 	"block.waters_alchemy_mod.cluster.fire_crystal_cluster": "Fire Crystal Cluster",
+	"block.waters_alchemy_mod.cluster.order_crystal_block": "Order Crystal Block",
+	"block.waters_alchemy_mod.cluster.order_crystal_budding": "Budding Order Crystal",
+	"block.waters_alchemy_mod.cluster.order_crystal_large": "Large Order Crystal Bud",
+	"block.waters_alchemy_mod.cluster.order_crystal_medium": "Medium Order Crystal Bud",
+	"block.waters_alchemy_mod.cluster.order_crystal_small": "Small Order Crystal Bud",
+	"block.waters_alchemy_mod.cluster.order_crystal_cluster": "Order Crystal Cluster",
+	"block.waters_alchemy_mod.cluster.disorder_crystal_block": "Disorder Crystal Block",
+	"block.waters_alchemy_mod.cluster.disorder_crystal_budding": "Budding Disorder Crystal",
+	"block.waters_alchemy_mod.cluster.disorder_crystal_large": "Large Disorder Crystal Bud",
+	"block.waters_alchemy_mod.cluster.disorder_crystal_medium": "Medium Disorder Crystal Bud",
+	"block.waters_alchemy_mod.cluster.disorder_crystal_small": "Small Disorder Crystal Bud",
+	"block.waters_alchemy_mod.cluster.disorder_crystal_cluster": "Disorder Crystal Cluster",
 	"container.waters_alchemy_mod.alchemical_furnace": "Alchemical Furnace",
 	"research.waters_alchemy_mod.beginner_brewing.name": "Beginner Brewing",
 	"research.waters_alchemy_mod.beginner_brewing.desc": "The simple cauldron is a powerful tool, if used properly. It's potential can seemingly be unlocked with a simple spoon",
