--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -91,5 +91,6 @@
 	"block.waters_alchemy_mod.custom_spawner.max_nearby_entities": "Max Nearby Entities: %d",
 	"block.waters_alchemy_mod.custom_spawner.spawn_range": "Spawn Range: %d",
 	"block.waters_alchemy_mod.custom_spawner.mob": "Spawns: %s",
-	"block.waters_alchemy_mod.custom_spawner.no_spawn": "None"
+	"block.waters_alchemy_mod.custom_spawner.no_spawn": "None",
+	"attribute.name.generic.magic_resistance": "% Magic Resistance"
 }
