Add missing blockstates, models, textures, and localization

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -4,7 +4,8 @@
 	"item.waters_alchemy_mod.aspect.earth": "Earth",
 	"item.waters_alchemy_mod.aspect.fire": "Fire",
 	"item.waters_alchemy_mod.aspect.order": "Order",
-	"item.waters_alchemy_mod.aspect.disorder": "Discord",
+	"item.waters_alchemy_mod.aspect.disorder": "Disorder",
+	"item.waters_alchemy_mod.aspect.metal": "Metal",
 	"item.waters_alchemy_mod.witchy_spoon": "Witchy Spoon",
 	"item.waters_alchemy_mod.throw_bottle": "Empty Splash Bottle",
 	"item.waters_alchemy_mod.ladle": "Ladle",
@@ -25,6 +26,24 @@
 	"item.waters_alchemy_mod.phial": "Filled Phial",
 	"item.waters_alchemy_mod.phial.empty": "Empty Phial",
 	"item.waters_alchemy_mod.research_book": "Research Book",
+	"item.waters_alchemy_mod.spawn_egg_base": "Base Spawn Egg",
+	"item.waters_alchemy_mod.thuwumium_ingot": "Thuwumium Ingot",
+	"item.waters_alchemy_mod.thuwumium_pickaxe": "Thuwumium Pickaxe",
+	"item.waters_alchemy_mod.thuwumium_axe": "Thuwumium Axe",
+	"item.waters_alchemy_mod.thuwumium_hoe": "Thuwumium Hoe",
+	"item.waters_alchemy_mod.thuwumium_shovel": "Thuwumium Shovel",
+	"item.waters_alchemy_mod.thuwumium_sword": "Thuwumium Sword",
+	"item.waters_alchemy_mod.thuwumium_helmet": "Thuwumium Helmet",
+	"item.waters_alchemy_mod.thuwumium_chestplate": "Thuwumium Chestplate",
+	"item.waters_alchemy_mod.thuwumium_leggings": "Thuwumium Leggings",
+	"item.waters_alchemy_mod.thuwumium_boots": "Thuwumium Boots",
+	"item.waters_alchemy_mod.goggles": "Alchemical Goggles",
+	"item.waters_alchemy_mod.magnifying_glass": "Alchemical Magnifying Glass",
+	"item.waters_alchemy_mod.brass_ingot": "Alchemical Brass Ingot",
+	"item.waters_alchemy_mod.alchemist_hood": "Alchemist's Hood",
+	"item.waters_alchemy_mod.alchemist_robe": "Alchemist's Robe",
+	"item.waters_alchemy_mod.alchemist_leggings": "Alchemist's Pants",
+	"item.waters_alchemy_mod.alchemist_shoes": "Alchemist's Shoes",
 	"itemGroup.waters_alchemy_mod.alchemy_mod_group": "Thuwumcraft",
 	"itemGroup.waters_alchemy_mod.aspect_group": "Aspects",
 	"text.waters_alchemy_mod.tooltip.poison_applied": "Applied Effects",
@@ -72,6 +91,13 @@
 	"block.waters_alchemy_mod.cluster.disorder_crystal_medium": "Medium Disorder Crystal Bud",
 	"block.waters_alchemy_mod.cluster.disorder_crystal_small": "Small Disorder Crystal Bud",
 	"block.waters_alchemy_mod.cluster.disorder_crystal_cluster": "Disorder Crystal Cluster",
+	"block.waters_alchemy_mod.nekomancy_table": "Nekomancy Table",
+	"block.waters_alchemy_mod.crafting_hopper": "Pattern Crafter",
+	"block.waters_alchemy_mod.vis_liquifier": "Vis Liquifier",
+	"block.waters_alchemy_mod.aspect_crafting_block": "Alchemical Crafting Table",
+	"block.waters_alchemy_mod.potion_sprayer": "Potion Sprayer",
+	"block.waters_alchemy_mod.essentia_smeltery": "Essentia Smeltery",
+	"block.waters_alchemy_mod.essentia_refinery": "Essentia Refinery",
 	"container.waters_alchemy_mod.alchemical_furnace": "Alchemical Furnace",
 	"research.waters_alchemy_mod.beginner_brewing.name": "Beginner Brewing",
 	"research.waters_alchemy_mod.beginner_brewing.desc": "The simple cauldron is a powerful tool, if used properly. It's potential can seemingly be unlocked with a simple spoon",
@@ -92,5 +118,13 @@
 	"block.waters_alchemy_mod.custom_spawner.spawn_range": "Spawn Range: %d",
 	"block.waters_alchemy_mod.custom_spawner.mob": "Spawns: %s",
 	"block.waters_alchemy_mod.custom_spawner.no_spawn": "None",
-	"attribute.name.generic.magic_resistance": "% Magic Resistance"
+	"attribute.name.generic.magic_resistance": "% Magic Resistance",
+	"screen.waters_alchemy_mod.nekomancy_table": "Nekomancy Table",
+	"screen.waters_alchemy_mod.crystal_crafting_table": "Alchemical Crafting Table",
+	"screen.waters_alchemy_mod.potion_sprayer": "Potion Sprayer",
+	"screen.waters_alchemy_mod.essentia_smeltery": "Essentia Smeltery",
+	"sound.waters_alchemy_mod.water_swirl": "Water swirls",
+	"sound.waters_alchemy_mod.bubble": "Cauldron bubbles",
+	"sound.waters_alchemy_mod.page_flip": "Page flips",
+	"sound.waters_alchemy_mod.magic": "Magic happens"
 }
