Add decorative staffs

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -101,6 +101,7 @@
 	"block.waters_alchemy_mod.potion_sprayer": "Potion Sprayer",
 	"block.waters_alchemy_mod.essentia_smeltery": "Essentia Smeltery",
 	"block.waters_alchemy_mod.essentia_refinery": "Essentia Refinery",
+	"block.waters_alchemy_mod.staff.decorative": "Decorative Staff",
 	"container.waters_alchemy_mod.alchemical_furnace": "Alchemical Furnace",
 	"research.waters_alchemy_mod.beginner_brewing.name": "Beginner Brewing",
 	"research.waters_alchemy_mod.beginner_brewing.desc": "The simple cauldron is a powerful tool, if used properly. It's potential can seemingly be unlocked with a simple spoon",
