Create initial design for customizable wands

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -47,6 +47,10 @@
 	"item.waters_alchemy_mod.eye_of_the_unknown": "?????",
 	"item.waters_alchemy_mod.eye_of_the_known": "Eye of the Unknown",
 	"item.waters_alchemy_mod.dimensional_fluid_bucket": "Dimensional Fluid Bucket",
+	"item.waters_alchemy_mod.wand": "Wand",
+	"item.waters_alchemy_mod.wand.core": "Core",
+	"item.waters_alchemy_mod.wand.cap": "Cap",
+	"item.waters_alchemy_mod.wand.spell": "Spell",
 	"itemGroup.waters_alchemy_mod.alchemy_mod_group": "Thuwumcraft",
 	"itemGroup.waters_alchemy_mod.aspect_group": "Aspects",
 	"text.waters_alchemy_mod.tooltip.poison_applied": "Applied Effects",
