Improve rendering of wands based on components

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -49,7 +49,9 @@
 	"item.waters_alchemy_mod.dimensional_fluid_bucket": "Dimensional Fluid Bucket",
 	"item.waters_alchemy_mod.wand": "Wand",
 	"item.waters_alchemy_mod.wand.core": "Core",
+	"item.waters_alchemy_mod.wand.core.none": "None",
 	"item.waters_alchemy_mod.wand.cap": "Cap",
+	"item.waters_alchemy_mod.wand.cap.none": "None",
 	"item.waters_alchemy_mod.wand.spell": "Spell",
 	"item.waters_alchemy_mod.wand.spell.none": "None",
 	"item.waters_alchemy_mod.wand.spell.remove": "Remove Focus",
