Add wand workbench

--- a/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
+++ b/src/main/resources/assets/waters_alchemy_mod/lang/en_us.json
@@ -56,6 +56,8 @@
 	"item.waters_alchemy_mod.wand.spell.none": "None",
 	"item.waters_alchemy_mod.wand.spell.remove": "Remove Focus",
 	"item.waters_alchemy_mod.wand_focus": "Wand Focus",
+	"item.waters_alchemy_mod.wand_cap.recharge_type": "Recharge Type",
+	"item.waters_alchemy_mod.wand_core.vis_capacity": "Vis Capacity",
 	"itemGroup.waters_alchemy_mod.alchemy_mod_group": "Thuwumcraft",
 	"itemGroup.waters_alchemy_mod.aspect_group": "Aspects",
 	"text.waters_alchemy_mod.tooltip.poison_applied": "Applied Effects",
@@ -112,6 +114,7 @@
 	"block.waters_alchemy_mod.essentia_refinery": "Essentia Refinery",
 	"block.waters_alchemy_mod.staff.decorative": "Decorative Staff",
 	"container.waters_alchemy_mod.alchemical_furnace": "Alchemical Furnace",
+	"container.waters_alchemy_mod.wand_workbench": "Wand Workbench",
 	"research.waters_alchemy_mod.beginner_brewing.name": "Beginner Brewing",
 	"research.waters_alchemy_mod.beginner_brewing.desc": "The simple cauldron is a powerful tool, if used properly. It's potential can seemingly be unlocked with a simple spoon",
 	"research.waters_alchemy_mod.beginner_brewing.desc.completed": "This spoon seems satisfactory",
