Add various special features to the magic tools

--- a/src/main/resources/assets/thuwumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thuwumcraft/lang/en_us.json
@@ -16,6 +16,11 @@
 	"item.thuwumcraft.magic_dust": "Magic Dust",
 	"item.thuwumcraft.magic_pickaxe": "Magic Infused Pickaxe",
 	"item.thuwumcraft.magic_axe": "Magic Infused Axe",
+	"item.thuwumcraft.magic_shovel": "Magic Infused Shovel",
+	"item.thuwumcraft.magic_hoe": "Magic Infused Hoe",
+	"item.thuwumcraft.magic_battleaxe": "Magic Infused Battleaxe",
+	"item.thuwumcraft.magic_sword": "Magic Infused Sword",
+	"item.thuwumcraft.magic_bow": "Magic Infused Bow",
 	"item.thuwumcraft.lingering_bottle": "Lingering Bottle",
 	"item.thuwumcraft.necromancy_skull": "Decaying Skull",
 	"item.thuwumcraft.necromancy_arm": "Rotting Arm",
