Add missing localization

--- a/src/main/resources/assets/thuwumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thuwumcraft/lang/en_us.json
@@ -63,11 +63,34 @@
 	"item.thuwumcraft.wand_focus": "Wand Focus",
 	"item.thuwumcraft.wand_cap.recharge_type": "Recharge Type",
 	"item.thuwumcraft.wand_core.vis_capacity": "Vis Capacity",
+	"item.thuwumcraft.fortress_helmet": "Thuwumic Fortress Helmet",
+	"item.thuwumcraft.fortress_chestplate": "Thuwumic Fortress Chestplate",
+	"item.thuwumcraft.fortress_leggings": "Thuwumic Fortress Leggings",
+	"item.thuwumcraft.boots_of_blinding_speed": "Boots of Blinding Speed",
+	"item.thuwumcraft.ice_staff": "Ice Staff",
+	"item.thuwumcraft.snow_staff": "Snow Staff",
+	"item.thuwumcraft.water_staff": "Water Staff",
+	"item.thuwumcraft.fire_staff": "Fire Staff",
+	"item.thuwumcraft.sand_staff": "Sand Staff",
+	"item.thuwumcraft.wand_of_holes": "Wand of Holes",
+	"item.thuwumcraft.wood_core": "Wooden Wand Core",
+	"item.thuwumcraft.greatwood_core": "Greatwood Wand Core",
+	"item.thuwumcraft.silverwood_core": "Silverwood Wand Core",
+	"item.thuwumcraft.iron_cap": "Iron Wand Cap",
+	"item.thuwumcraft.brass_cap": "Brass Wand Cap",
+	"item.thuwumcraft.thuwumium_cap": "Thuwumium Wand Cap",
 	"itemGroup.thuwumcraft.alchemy_mod_group": "Thuwumcraft",
 	"itemGroup.thuwumcraft.aspect_group": "Aspects",
 	"text.thuwumcraft.tooltip.poison_applied": "Applied Effects",
 	"effect.thuwumcraft.projectile_attraction": "Attraction",
 	"effect.thuwumcraft.projectile_shield": "Repulsion",
+	"block.thuwumcraft.arcane_stone": "Arcane Stone",
+	"block.thuwumcraft.arcane_stone_slab": "Arcane Stone Slab",
+	"block.thuwumcraft.silverwood_sapling": "Silverwood Sapling",
+	"block.thuwumcraft.dimensional_fluid": "Dimensional Fluid",
+	"block.thuwumcraft.arcane_lamp": "Arcane Lamp",
+	"block.thuwumcraft.deepslate_grass": "Grassy Deepslate",
+	"block.thuwumcraft.glowing_deepslate": "Glowing Deepslate",
 	"block.thuwumcraft.cauldron.invalid_recipe": "This recipe doesn't seem to be working...",
 	"block.thuwumcraft.pedestal": "Pedestal",
 	"block.thuwumcraft.jar": "Jar",
