Add arcane seals and runes

--- a/src/main/resources/assets/thuwumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thuwumcraft/lang/en_us.json
@@ -79,6 +79,12 @@
 	"item.thuwumcraft.iron_cap": "Iron Wand Cap",
 	"item.thuwumcraft.brass_cap": "Brass Wand Cap",
 	"item.thuwumcraft.thuwumium_cap": "Thuwumium Wand Cap",
+	"item.thuwumcraft.air_rune": "Air Rune",
+	"item.thuwumcraft.fire_rune": "Fire Rune",
+	"item.thuwumcraft.water_rune": "Water Rune",
+	"item.thuwumcraft.earth_rune": "Earth Rune",
+	"item.thuwumcraft.order_rune": "Order Rune",
+	"item.thuwumcraft.disorder_rune": "Disorder Rune",
 	"itemGroup.thuwumcraft.alchemy_mod_group": "Thuwumcraft",
 	"itemGroup.thuwumcraft.aspect_group": "Aspects",
 	"text.thuwumcraft.tooltip.poison_applied": "Applied Effects",
@@ -141,6 +147,7 @@
 	"block.thuwumcraft.essentia_smeltery": "Essentia Smeltery",
 	"block.thuwumcraft.essentia_refinery": "Essentia Refinery",
 	"block.thuwumcraft.staff.decorative": "Decorative Staff",
+	"block.thuwumcraft.arcane_seal": "Arcane Seal",
 	"container.thuwumcraft.alchemical_furnace": "Alchemical Furnace",
 	"container.thuwumcraft.wand_workbench": "Wand Workbench",
 	"research.thuwumcraft.beginner_brewing.name": "Beginner Brewing",
