Improve phials and their tooltip

--- a/src/main/resources/assets/thuwumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thuwumcraft/lang/en_us.json
@@ -28,8 +28,9 @@
 	"item.thuwumcraft.necromancy_heart": "Putrefied Heart",
 	"item.thuwumcraft.necromancy_ribcage": "Desecrated Ribcage",
 	"item.thuwumcraft.crystal": "Elemental Shard",
-	"item.thuwumcraft.phial": "Filled Phial",
-	"item.thuwumcraft.phial.empty": "Empty Phial",
+	"item.thuwumcraft.phial": "Glass Phial",
+	"item.thuwumcraft.phial.filled": "Glass Phial (%s)",
+	"item.thuwumcraft.phial.empty": "Empty Glass Phial",
 	"item.thuwumcraft.research_book": "Research Book",
 	"item.thuwumcraft.spawn_egg_base": "Base Spawn Egg",
 	"item.thuwumcraft.thuwumium_ingot": "Thuwumium Ingot",
