Add golem and related things

--- a/src/main/resources/assets/thuwumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thuwumcraft/lang/en_us.json
@@ -86,6 +86,9 @@
 	"item.thuwumcraft.earth_rune": "Earth Rune",
 	"item.thuwumcraft.order_rune": "Order Rune",
 	"item.thuwumcraft.disorder_rune": "Disorder Rune",
+	"item.thuwumcraft.golemancy_bell": "Golemancer's Bell",
+	"item.thuwumcraft.golem": "Brass Golem",
+	"item.thuwumcraft.pickup_golem_seal": "Collection Seal",
 	"itemGroup.thuwumcraft.alchemy_mod_group": "Thuwumcraft",
 	"itemGroup.thuwumcraft.aspect_group": "Aspects",
 	"text.thuwumcraft.tooltip.poison_applied": "Applied Effects",
