Add golem whitelisting and coloring

--- a/src/main/resources/assets/thuwumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thuwumcraft/lang/en_us.json
@@ -87,8 +87,10 @@
 	"item.thuwumcraft.order_rune": "Order Rune",
 	"item.thuwumcraft.disorder_rune": "Disorder Rune",
 	"item.thuwumcraft.golemancy_bell": "Golemancer's Bell",
+	"item.thuwumcraft.golem_marker": "Golem Marker",
 	"item.thuwumcraft.golem": "Brass Golem",
 	"item.thuwumcraft.pickup_golem_seal": "Collection Seal",
+	"item.thuwumcraft.stock_golem_seal": "Stocking Seal",
 	"itemGroup.thuwumcraft.alchemy_mod_group": "Thuwumcraft",
 	"itemGroup.thuwumcraft.aspect_group": "Aspects",
 	"text.thuwumcraft.tooltip.poison_applied": "Applied Effects",
