--- a/src/main/resources/assets/thuwumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thuwumcraft/lang/en_us.json
@@ -89,8 +89,8 @@
 	"item.thuwumcraft.golemancy_bell": "Golemancer's Bell",
 	"item.thuwumcraft.golem_marker": "%s Golem Marker",
 	"item.thuwumcraft.golem": "Brass Golem",
-	"item.thuwumcraft.pickup_golem_seal": "Collection Seal",
-	"item.thuwumcraft.stock_golem_seal": "Stocking Seal",
+	"item.thuwumcraft.pickup_golem_seal": "Collection Motivation Core",
+	"item.thuwumcraft.stock_golem_seal": "Stocking Motivation Core",
 	"itemGroup.thuwumcraft.alchemy_mod_group": "Thuwumcraft",
 	"itemGroup.thuwumcraft.aspect_group": "Aspects",
 	"text.thuwumcraft.tooltip.poison_applied": "Applied Effects",
