Add hungry chest

--- a/src/main/resources/assets/thuwumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thuwumcraft/lang/en_us.json
@@ -154,6 +154,7 @@
 	"block.thuwumcraft.essentia_refinery": "Essentia Refinery",
 	"block.thuwumcraft.staff.decorative": "Decorative Staff",
 	"block.thuwumcraft.arcane_seal": "Arcane Seal",
+	"block.thuwumcraft.hungry_chest": "Hungry Chest",
 	"container.thuwumcraft.alchemical_furnace": "Alchemical Furnace",
 	"container.thuwumcraft.wand_workbench": "Wand Workbench",
 	"research_category.thuwumcraft.starter.name": "Basics",
