--- a/src/main/resources/assets/thuwumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thuwumcraft/lang/en_us.json
@@ -27,7 +27,7 @@
 	"item.thuwumcraft.necromancy_leg": "Decomposing Leg",
 	"item.thuwumcraft.necromancy_heart": "Putrefied Heart",
 	"item.thuwumcraft.necromancy_ribcage": "Desecrated Ribcage",
-	"item.thuwumcraft.crystal": "Elemental Shard",
+	"item.thuwumcraft.crystal": "%s Shard",
 	"item.thuwumcraft.phial": "Glass Phial",
 	"item.thuwumcraft.phial.filled": "Glass Phial (%s)",
 	"item.thuwumcraft.phial.empty": "Empty Glass Phial",
@@ -177,6 +177,7 @@
 	"block.thuwumcraft.spawner_frame": "Spawner Frame",
 	"block.thuwumcraft.wand_workbench": "Wand Workbench",
 	"block.thuwumcraft.brewing_crucible": "Crucible",
+	"block.thuwumcraft.brewing_cauldron": "Alchemical Cauldron",
 	"container.thuwumcraft.alchemical_furnace": "Alchemical Furnace",
 	"container.thuwumcraft.wand_workbench": "Wand Workbench",
 	"research_category.thuwumcraft.starter.name": "Basics",
