Add rendering to focal manipulator

--- a/src/main/resources/assets/thuwumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thuwumcraft/lang/en_us.json
@@ -178,6 +178,7 @@
 	"block.thuwumcraft.wand_workbench": "Wand Workbench",
 	"block.thuwumcraft.brewing_crucible": "Crucible",
 	"block.thuwumcraft.brewing_cauldron": "Alchemical Cauldron",
+	"block.thuwumcraft.focal_manipulator": "FOwOcal Manipuwator :3",
 	"container.thuwumcraft.alchemical_furnace": "Alchemical Furnace",
 	"container.thuwumcraft.wand_workbench": "Wand Workbench",
 	"research_category.thuwumcraft.starter.name": "Basics",
