--- a/src/main/resources/assets/thuwumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thuwumcraft/lang/en_us.json
@@ -233,6 +233,7 @@
 	"screen.thuwumcraft.crystal_crafting_table": "Alchemical Crafting Table",
 	"screen.thuwumcraft.potion_sprayer": "Potion Sprayer",
 	"screen.thuwumcraft.essentia_smeltery": "Essentia Smeltery",
+	"screen.thuwumcraft.focal_manipulator.create": "Create",
 	"sound.thuwumcraft.water_swirl": "Water swirls",
 	"sound.thuwumcraft.bubble": "Cauldron bubbles",
 	"sound.thuwumcraft.page_flip": "Page flips",
@@ -252,6 +253,11 @@
 	"spell.thuwumcraft.ice": "Ice",
 	"spell.thuwumcraft.snow": "Snow",
 	"spell.thuwumcraft.sand": "Sand",
+	"spell_modifier.thuwumcraft.damage": "Spell Damage",
+	"spell_modifier.thuwumcraft.fire_time": "Time Alight",
+	"spell_modifier.thuwumcraft.velocity": "Spell Velocity",
+	"spell_modifier.thuwumcraft.blindness": "Blinding Time",
+	"spell_modifier.thuwumcraft.icy": "Icy",
 	"wand_core.thuwumcraft.wood": "Mundane Wood",
 	"wand_core.thuwumcraft.greatwood": "Greatwood",
 	"wand_core.thuwumcraft.silverwood": "Silverwood",
